@@ -27,6 +27,10 @@ StatQq <- proto(Stat, {
     qplot(sample = y, stat="qq", dist=qt, df=5)
     qplot(sample = y, stat="qq", quantiles=seq(0,1, length=100))
     
+    df <- data.frame(y)
+    ggplot(y, aes(sampe = y)) + stat_qq()
+    ggplot(y, aes(sampe = y)) + geom_point(stat = "qq")
+    
     qplot(sample = precip, stat="qq")
   }
   
