@@ -18,6 +18,7 @@ geom_errorbar <- GeomErrorbar$build_accessor()
 geom_histogram <- GeomHistogram$build_accessor()
 geom_hline <- GeomHline$build_accessor()
 geom_interval <- GeomInterval$build_accessor()
+geom_interval_2d <- GeomInterval2d$build_accessor()
 geom_jitter <- GeomJitter$build_accessor()
 geom_line <- GeomLine$build_accessor()
 geom_linerange <- GeomLinerange$build_accessor()
@@ -26,6 +27,7 @@ geom_point <- GeomPoint$build_accessor()
 geom_pointrange <- GeomPointrange$build_accessor()
 geom_polygon <- GeomPolygon$build_accessor()
 geom_quantile <- GeomQuantile$build_accessor()
+geom_rect <- GeomRect$build_accessor()
 geom_ribbon <- GeomRibbon$build_accessor()
 geom_rug <- GeomRug$build_accessor()
 geom_segment <- GeomSegment$build_accessor()
