@@ -1,6 +1,9 @@
 ggplot2 0.6.1
 ----------------------------------------
-
+  * qplot now does a better of building the data frame when not explicitly supplied
+  * qplot now treats any arguments wrapped in I() as parameters, not aesthetics:
+    * qplot(mpg, wt, data=mtcars, colour = I("red"))
+    * qplot(mpg, wt, data=mtcars, size = I(5))
   * geom_segment should now work correctly in all coordinate systems
   * order of legends reversed to match order of x axis (and to be consistent with previous versions)
   * background colour of legends key matches plot
